Fixes missing filter after z-index change

--- a/app/assets/stylesheets/demands.sass
+++ b/app/assets/stylesheets/demands.sass
@@ -91,6 +91,7 @@ body
   overflow: auto
   padding: .2em .6em .6em 1em
   border-radius: 6px
+  z-index: 30
   &:hover
     background: rgba(255,255,255,1)
   ol
